Thu Nov 1 15:49:04  Balachandran Natarajan  <bala@cs.wustl.edu>

	* include/makeinclude/platform_osf1_4.x_cxx.GNU: Moved the
	  CXX_VERSION definition to the global scope. 
	
	* include/makeinclude/platform_tru64_cxx.GNU: Added
	  -D_PTHREAD_ENV_DECCXX flag to the CPPFLAGS. This is done only
	  for v5.1, 1885. The pthreads.h in 1885 is messed up. The
	  conditional include of c_asm.h is busted for DECCXX and
	  v1885. Hence the change. We need to do this to protect ACE and
	  TAO applications on this platform and compiler
	  combinations. Thanks to  Don Hinton <dhinton@gmx.net> for
	  reporting the problem. 

Thu Nov  1 14:25:52 2001  Jeff Parsons <parsons@cs.wustl.edu>

        * ace/config-win32-borland.h:

          Added fix sent in by Chris Kohlhoff <kohlhoff@pop.ihug.com.au>
          to ACE_CC_PREPROCESSOR_ARGS to enable the recognition of a
          filename to which the preprocessor output is to be directed.
          There is also a corresponding fix in TAO_IDL/driver/drv_preproc.cpp
          that carries out the redirection.

Thu Nov  1 10:27:21 2001  Ossama Othman  <ossama@uci.edu>

	* ace/Select_Reactor_Base.h (open):
	* ace/Select_Reactor_T.h (ACE_Select_Reactor_T, open):

	  Added a note about the "size" of the Select_Reactor on Unix
	  platforms. On Unix platforms, the size parameter should be as
	  large as the maximum number of file descriptors allowed for a
	  given process.  This is necessary since a file descriptor is
	  used to directly index the array of event handlers maintained by
	  the Reactor's handler repository.  Direct indexing is used for
	  efficiency reasons.

Thu Nov  1 06:38:30 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/ACE.cpp: Fixed some minor formatting problems so that
	  format_hexdump() works properly.  Thanks to Kyle Brost
 	  <Kyle.Brost@quest.com> for reporting this.

	* ace/config-win32.h: Include the config-cygwin32.h file when
	  __CYGWIN32__ is enabled.  Thanks to Johnny Willemsen for